--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
       {
          "type": "cppbuild",
          "label": "C/C++: g++.exe build active file",
-         "command": "C:\\Users\\FPT\\w64devkit\\bin\\g++.exe",
+         "command": "C:\\w64devkit\\bin\\g++.exe",
          "args": [
             "-fdiagnostics-color=always",
             "-g",
