--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
          "environment": [],
          "externalConsole": false,
          "MIMode": "gdb",
-         "miDebuggerPath": "C:\\Users\\FPT\\w64devkit\\bin\\gdb.exe",
+         "miDebuggerPath": "C:\\w64devkit\\bin\\gdb.exe",
          "setupCommands": [
             {
                "description": "Enable pretty-printing for gdb",
@@ -37,7 +37,7 @@
          "environment": [],
          "externalConsole": false,
          "MIMode": "gdb",
-         "miDebuggerPath": "C:\\Users\\FPT\\w64devkit\\bin\\gdb.exe",
+         "miDebuggerPath": "C:\\w64devkit\\bin\\gdb.exe",
          "setupCommands": [
             {
                "description": "Enable pretty-printing for gdb",
